# simd

./: CMakeLists.txt  CMakePresets.json
example/: CMakeLists.txt  main.cpp
include/simd/: cast.hpp  macros.hpp  math.hpp  ops.hpp  simd.hpp  traits.hpp  type.hpp
include/simd/impl/: simd_avx2.hpp  simd_sse42.hpp  simd_standard.hpp
src/: CMakeLists.txt  simd.cpp
